Updated work on HTML page

--- a/index.html
+++ b/index.html
@@ -1,2 +1,20 @@
-<p>Bri<p>
+<!DOCTYPE html>
+
+<html>
+<main>
+    <head>
+        <title>Louisiana to Missouri</title>
+    </head>
+    <body>
+     <h1> Why I Left Louisiana for Missouri</h1>
+     <p> I was not born in <b>St. Louis, Missouri</b>. In fact, I have only lived here for only 19 months.I want to tell you the story of how I got here and how I like it or don't like it! Stay tuned!</p>
+    </body>
+
+    <article>
+    <h2>As A Kid</h2>
+    <p>I have always been a little different from the rest of my siblings. I am actually the only sibling out of five that did not get the name of one my parents. My mother was a traveling nurse when I was young and i loved it. I loved seeing different places and meeting different people, but I did not like making close connections just to have to separate from them. Louisiana was great but many things led to me having the desire from a very young age to leave. I always knew I wouldn't stay forever. I was not the person who is in love with their city or, in my case, small town. Some reasons I wanted to leave were:
+        <ol> The racism was terrible.</ol> <ol> Louisiana is way too small.</ol> <ol> I had to pay almost $400 for a driving class just to get my license.</ol> </p>
+    </article>
+</main>
+</html>
     
