--- a/index.html
+++ b/index.html
@@ -2,39 +2,44 @@
 
 <html>
 <main>
-    <head>
-        <title>Louisiana to Missouri</title>
-    </head>
-    <body>
-     <h1> Why I Left Louisiana for Missouri</h1>
+    <header>
+    <title>Louisiana to Missouri</title>
+    <h1> Why I Left Louisiana for Missouri</h1>
      <p> I was not born in <b>St. Louis, Missouri</b>. In fact, I have only lived here for only 19 months.I want to tell you the story of how I got here and how I like it or don't like it! Stay tuned!</p>
-    </body>
+    </header>
 
     <article>
     <h2>As A Kid</h2>
     <p>I am from a small town called Vidalia, Lousiana where I grew up with four other siblings. I have always been a little different from the rest of my siblings. I am actually the only one that did not get the name of one my parents. My mother was a traveling nurse when I was young and I loved it. I loved seeing different places and meeting different people, but I did not like making close connections just to have to separate from them. Louisiana was great but many things led to me having the desire from a very young age to leave. I always knew I wouldn't stay forever. I was not the person who is in love with their city or, in my case, small town. Some reasons I wanted to leave were:
         <ol> The racism was terrible.</ol> <ol> Louisiana is way too small.</ol> <ol> I had to pay almost $400 for a driving class just to get my license.</ol> </p>
+    <img src = "images/little-bri.jpg" alt = "Picture of Bri as a kid">
     </article>
 
     <article>
-      <h2> High School and College</h2>
-      <p>When I was a senior in high school, I came to faith in God which led to me going joining different groups in college. I did not know at the time that this would come to be the biggest determining factor in my transition to St.Louis. I will tell more of this in upcoming sections.</p>
+        <h2> High School and College</h2>
+        <p>When I was a senior in high school, I came to faith in God which led to me going joining different groups in college. I did not know at the time that this would come to be the biggest determining factor in my transition to St.Louis. I will tell more of this in upcoming sections.</p>
+        <img src = "images/high-school.jpg" alt = "Picture of Bri in High school">
     </article>
 
     <article>
         <h2>Kids Across America</h2>
         <p> Kids Across Ameica is a summer camp for kids ages 9-18. I worked there as a counselor the summer of my sophomore year of college. The mission of KAA is to help kids know who Jesus Christ is through plenty of fun activities, chants and other experiences. There I met my ex-boyfriend who is from St.Louis and the Relationship Coordinator at Urban KLIFE of St. Louis.</p>
+        <img src = "images/kaa.png" alt = "Picture of KAA acronym">
     </article>
 
     <article>
         <h2>Leaving College and Louisiana</h2>
         <p>Though I had a high GPA and ACT score, I did not have the knowledge or resoruces to get all I could get for those accomplishments. I struggled to pay for college each semester. In 2019, I tried to find a place to stay off campus so that tuition would be cheaper, but I failed at that. I was going to have to drop out, but I did not want to stay at home. So I prayed and I knew God wanted me to move to St. Louis.</p>
+        <img src = "images/urban-klife.PNG" alt = "Picture of 2019-2020 KLIFE Staff">
     </article>
 
     <article>
         <h2>St. Louis</h2>
         <p>Moving to St. Louis was exhilarating. I came as soon as I could. I was able to be closer to my boyfriend at the time, grow and serve the kids of St. Louis City. I love it here so far. I plan on staying here for a while. Moving back home is not an option. </p>
+        <img src = "images/st-louis.jpg" alt = "Picture of the St. Louis Arch">
     </article>
+
+    <footer> &copy Bri'Anna Tolliver </footer>
 </main>
 </html>
     
